Closed Bug 248737 Opened 20 years ago Closed 20 years ago

Thunderbird prefs.js mentions "browser"

Categories

(Core :: Preferences: Backend, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: ross, Assigned: stdowa+bugzilla)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040614 Firefox/0.9
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040614 Firefox/0.9

The comment at the top of the default prefs.js file includes these lines:

 * If you make changes to this file while the browser is running,
 * the changes will be overwritten when the browser exits.

This is obviously an artifact from the Mozilla suite, and should be changed to
"...while the mail program is running, the changes will be overwritten when the
mail program exits."

Reproducible: Always
Steps to Reproduce:
Assignee: mscott → prefs
Status: UNCONFIRMED → NEW
Component: Preferences → Preferences: Backend
Ever confirmed: true
Product: Thunderbird → Browser
Version: unspecified → Trunk
Attached patch Comment NitSplinter Review
Comment on attachment 151807 [details] [diff] [review]
Comment Nit

Comment rs?
Attachment #151807 - Flags: superreview?(brendan)
Attachment #151807 - Flags: review?(brendan)
Comment on attachment 151807 [details] [diff] [review]
Comment Nit

Sure, rs=me for this kind of thing.

/be
Attachment #151807 - Flags: superreview?(brendan)
Attachment #151807 - Flags: superreview+
Attachment #151807 - Flags: review?(brendan)
Attachment #151807 - Flags: review+
Assignee: prefs → sdwalker
Checked in:

Checking in nsPrefService.cpp;
/cvsroot/mozilla/modules/libpref/src/nsPrefService.cpp,v  <--  nsPrefService.cpp
new revision: 1.85; previous revision: 1.84

Resolving FIXED.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: