Bug 248737 - Thunderbird prefs.js mentions "browser". Patch by Stephen Walker (sdwalker@myrealbox.com), r/sr=brendan.